fixed spacing and overall positioning

--- a/client/src/pages/components/EditNoteForm.css
+++ b/client/src/pages/components/EditNoteForm.css
@@ -1,4 +1,4 @@
-.NoteFormPlaceholder{
+/* .NoteFormPlaceholder{
     display: flex;
     position: absolute;
     top: 0px;
@@ -45,4 +45,45 @@
     flex-direction: column;
     align-items: center;
     height: 100%;
+} */
+
+
+.NoteFormPlaceholder{
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    justify-content: center;
+    align-items: center;
+}
+
+.NoteFormBackground{
+    background-color: white;
+    width: 20vw;
+    height: 30vh;
+    border-style: hidden;
+    border-radius: 5%;
+}
+
+.NoteFormBackground #NoteFormBtn{
+    display: flex;
+    margin-left: auto;
+}
+
+.NoteFormInput{
+    margin-top: -20%;
+    padding-bottom: 5%;
+    display: flex;
+    flex-direction: column;
+}
+.NoteForm{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
