--- a/client/src/pages/components/NoteForm.css
+++ b/client/src/pages/components/NoteForm.css
@@ -10,15 +10,20 @@
     align-items: center;
 }
 
+/* .noteFormContainer #NoteFormBtn{
+display: flex;
+} */
+
 .noteFormContainer {
-    background: white;
-    padding: 20px;
-    border-radius: 5px;
-    position: relative;
+    background-color: white;
+    width: 20vw;
     height: 30vh;
+    border-style: hidden;
+    border-radius: 5%;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 .closeBtn {
     position: relative;
